--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="app" ng-strict-di>
 <head>
-	<title>The Ledger</title>
+	<title>Nextflow Workflow Manager</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,6 +10,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-route.min.js"></script>
+	<script src="https://nervgh.github.io/pages/angular-file-upload/dist/angular-file-upload.min.js"></script>
 	<script src="app.js"></script>
 </head>
 <body>
