--- a/client/index.html
+++ b/client/index.html
@@ -10,16 +10,24 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-route.min.js"></script>
+	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
 	<script src="https://nervgh.github.io/pages/angular-file-upload/dist/angular-file-upload.min.js"></script>
 	<script src="app.js"></script>
 </head>
-<body>
+<body ng-controller="MainCtrl">
 	<div class="container-fluid">
 		<div class="page-header text-center">
 			<h1>Nextflow Workflow Manager</h1>
 		</div>
 
 		<ng-view></ng-view>
+	</div>
+
+	<div id="alerts">
+		<div uib-alert ng-repeat="a in alert.alerts" ng-class="'alert-' + a.type" close="alert.remove($index)">
+			<strong>{{a.header}}</strong>
+			<span>{{a.message}}<span>
+		</div>
 	</div>
 </body>
 </html>
