made hrefs relative

--- a/client/index.html
+++ b/client/index.html
@@ -15,12 +15,12 @@
 </head>
 <body ng-controller="MainCtrl">
 	<nav class="navbar navbar-expand navbar-dark bg-dark mb-5">
-		<a class="navbar-brand" href="/">Nextflow API</a>
+		<a class="navbar-brand" href="">Nextflow API</a>
 
 		<div class="collapse navbar-collapse justify-content-end">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="/#!/workflows">Workflows</a>
-				<a class="nav-item nav-link" href="/#!/tasks">Tasks</a>
+				<a class="nav-item nav-link" href="#!/workflows">Workflows</a>
+				<a class="nav-item nav-link" href="#!/tasks">Tasks</a>
 			</div>
 		</div>
 	</nav>
