--- a/client/index.html
+++ b/client/index.html
@@ -19,8 +19,8 @@
 
 		<div class="collapse navbar-collapse justify-content-end">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="/#!/workflows">Workflows</a>
-				<a class="nav-item nav-link" href="/#!/tasks">Tasks</a>
+				<a class="nav-item nav-link" href="#!/workflows">Workflows</a>
+				<a class="nav-item nav-link" href="#!/tasks">Tasks</a>
 			</div>
 		</div>
 	</nav>
