Fixed nav link to main page

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 </head>
 <body ng-controller="MainCtrl">
 	<nav class="navbar navbar-expand navbar-dark bg-dark mb-5">
-		<a class="navbar-brand" href="">Nextflow API</a>
+		<a class="navbar-brand" href="#!/">Nextflow API</a>
 
 		<div class="collapse navbar-collapse justify-content-end">
 			<div class="navbar-nav">
