Added initial model page, query dataset form

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
 			<div class="navbar-nav">
 				<a class="nav-item nav-link" href="#!/workflows">Workflows</a>
 				<a class="nav-item nav-link" href="#!/tasks">Tasks</a>
+				<a class="nav-item nav-link" href="#!/model">Model</a>
 			</div>
 		</div>
 	</nav>
